# BoltonCup

./: .env.example  .gitignore  404.html  404.html.br  BoltonCup.WebClient.styles.css  BoltonCup.WebClient.styles.css.br  BoltonCup.sln  CNAME  README.md  TimekeeperPlan.md  appsettings.json  appsettings.json.br  boltoncup.py  docker-compose.postgres.yml  docker-compose.webapi.yml  docker-compose.yml  index.html  index.html.br  robots.txt.br  sitemap.xml
.github/: AutoTriage.prompt
BoltonCup/: BoltonCup.csproj  BoltonCup.sln  Program.cs  publish.sh
BoltonCup.App/: App.xaml  App.xaml.cs  BoltonCup.App.csproj  MainPage.xaml.cs  MauiProgram.cs  privacy-policy.html
BoltonCup.Draft/: BoltonCup.Draft.csproj  Program.cs
BoltonCup.Scoresheet/: BoltonCup.Scoresheet.csproj  Dockerfile  Program.cs
BoltonCup.Shared/: BoltonCup.Shared.csproj  Component1.razor  ExampleJsInterop.cs  _Imports.razor
BoltonCup.Web/: BoltonCup.Web.csproj  Program.cs
Docker/: dev-stack.yml  postgres.yml  webapi.local.yml  webapi.yml
TextService/: SMS.py  app.py
_framework/: BoltonCup.Common.0jfmpupsn3.wasm  BoltonCup.Common.0jfmpupsn3.wasm.br  BoltonCup.Common.2c54k15sw5.wasm  BoltonCup.Common.2c54k15sw5.wasm.br  BoltonCup.Common.382tpn2nj3.wasm  BoltonCup.Common.382tpn2nj3.wasm.br  BoltonCup.Common.4o346il1si.wasm  BoltonCup.Common.4o346il1si.wasm.br  BoltonCup.Common.53hm2xaf6l.wasm  BoltonCup.Common.53hm2xaf6l.wasm.br  BoltonCup.Common.5d61mgcnbz.wasm  (+940 more)
scripts/supabase_migration/: avatars.py  bucket_download.py  bucket_upload.py  pyproject.toml  s3_team_goal_songs.py  supa_migrate.py
(+1690 files in other folders)
