[project]
name = "supabase-migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.45",
    "tool>=0.8.0",
]
